Fixes profileWrap width in mobile view

--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -84,17 +84,21 @@
 
     .profileWrap {
       display: flex;
+      width: 100%;
+      position: relative !important;
 
       img {
         width: 128px;
         height: 128px;
         object-position: 50% 15%;
       }
-      position: relative !important;
 
       .navigation {
         flex: 1;
+        display: flex;
+        flex-direction: column;
         justify-content: flex-end;
+
         padding-left: var(--spacing-small);
       }
     }
